Fix: ItemServiceImpl에서 toList()로 통일